# Hurricane-Severity

./: .gitignore  README.md  compute_metrics.py  labels_qwen.json
00_data_base/: labels.json
00_data_base/images/706_Fort Myers Beach, Florida/: clean.avif
01_model_inference/: InterVideo_2.5_inference.py  InternVideo-json-verify.py  InternVideo2.5_orig_pred.json  InternVideo2.5_pred_clean.json  OmniVinci_Inference.py  Omnivinci_pred.json  evaluate_vlms.py  labels_ llava-onevision-qwen2-7b-ov-hf .json  labels_Phi-3-vision.json  labels_llava.json  labels_ovis.json  labels_valley.json  models_evaluation.py
hurricane-damage-vlm-evaluation/: README.md  requirements.txt
hurricane-damage-vlm-evaluation/src/: __init__.py
hurricane-damage-vlm-evaluation/src/models/Oryx/: pyproject.toml
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/: __init__.py  conversation.py  mm_utils.py  utils.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/model/: __init__.py  builder.py  oryx_arch.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/model/language_model/: oryx_llama.py  oryx_qwen.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/model/multimodal_encoder/: builder.py  oryx_vit.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/model/multimodal_projector/: builder.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/model/multimodal_resampler/: builder.py  masked_drop.py  qformer.py  spatial_pool.py
hurricane-damage-vlm-evaluation/src/models/Oryx/oryx/train/: llama_flash_attn_monkey_patch.py  oryx_trainer.py  train.py  train_mem.py
(+13 files in other folders)
